<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/acegate"/>
    <TextView
        android:id="@+id/rules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rules"
        android:layout_marginTop="30dp"
        android:textSize="40dp"
        android:contentDescription="@string/rules"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo"/>
    <TextView
        android:id="@+id/rules1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r1"
        android:textSize="20dp"
        android:contentDescription="@string/r1"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rules"/>
    <TextView
        android:id="@+id/rules2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r2"
        android:textSize="20dp"
        android:contentDescription="@string/r2"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rules1"/>
    <TextView
        android:id="@+id/rules3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r3"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/r3"
        android:layout_below="@id/rules2"/>
    <TextView
        android:id="@+id/rules4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/r4"
        android:layout_marginTop="20dp"
        android:textSize="20dp"
        android:contentDescription="@string/r4"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rules3"/>
    <TextView
        android:id="@+id/rules5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/r5"
        android:text="@string/r5"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rules4"/>

    <Button
        android:id="@+id/starttest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:layout_below="@id/rules5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/start"/>

    <ImageButton
        android:id="@+id/profileIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/profileicon"
        android:contentDescription="@string/profileicon"
        android:layout_marginStart="10dp"
        android:layout_below="@id/starttest"/>
    <ImageButton
        android:id="@+id/examIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:layout_marginTop="145dp"
        android:src="@drawable/examicon"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/profileIcon"
        android:contentDescription="@string/examicon"
        android:layout_below="@id/starttest"/>
    <ImageButton
        android:id="@+id/homeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:src="@drawable/homeicon"
        android:backgroundTint="@color/white"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/resultIcon"
        android:contentDescription="@string/homeicon"
        android:layout_below="@id/starttest"/>
    <ImageButton
        android:id="@+id/resultIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:src="@drawable/result"
        android:layout_marginLeft="5dp"
        android:backgroundTint="@color/white"
        android:layout_toRightOf="@id/examIcon"
        android:contentDescription="@string/resulticon"
        android:layout_below="@id/starttest"/>



</RelativeLayout>



