<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:src="@drawable/acegate"/>
    <TextView
        android:id="@+id/choosepaper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Choose Paper"
        android:layout_marginTop="30dp"
        android:textSize="40dp"
        android:contentDescription="choosepaper"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo"/>

    <Button
        android:id="@+id/paper1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Paper 1"
        android:layout_below="@id/choosepaper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/start"
        android:onClick="startpaper1"/>

    <Button
        android:id="@+id/paper2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Paper 2"
        android:layout_below="@id/paper1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/start"
        android:onClick="startpaper2"/>

    <Button
        android:id="@+id/paper3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Paper 3"
        android:layout_below="@id/paper2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/start"
        android:onClick="startpaper3"/>

    <Button
        android:id="@+id/paper4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Paper 4"
        android:layout_below="@id/paper3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/start"
        android:onClick="startpaper4"/>

    <Button
        android:id="@+id/paper5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Paper 5"
        android:layout_below="@id/paper4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="30dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/start"
        android:onClick="startpaper5"/>


    <ImageButton
        android:id="@+id/homeIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/homeicon"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/homeicon"
        android:layout_below="@id/paper5"/>




</RelativeLayout>